infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          #image: us.gcr.io/ticketing-dev-370913/auth
          image: furkanmeydan/notification:latest
          ports:
           - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
    - name: notification
      protocol: TCP
      port: 3000 
      targetPort: 3000
