infra/k8s/zookeeper-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:6.2.0
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zookeeper-storage
              mountPath: /var/lib/zookeeper/data
      volumes:
        - name: zookeeper-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - name: zookeeper
      port: 2181
      targetPort: 2181
