infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: myticketing.com #ticketing.dev
      http:
        paths:
          - path: "/api/users/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: "/api/diary/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: diary-srv
                port:
                  number: 3000
          - path: "/api/notification/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: notification-srv
                port:
                  number: 3000
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
